# EdgeHierarchies

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  benchmark.cpp  benchmarkTurncostDijkstraRank.cpp  benchmarkTurncosts.cpp  calculateMinimalSearchSpace.cpp
lib/: arraySet.h  bipartiteMinimumVertexCover.h  definitions.h  dimacsGraphReader.h  edgeHierarchyConstruction.h  edgeHierarchyGraph.h  edgeHierarchyGraphQueryOnly.h  edgeHierarchyQuery.h  edgeHierarchyQueryOnly.h  edgeHierarchyQueryOnlyNoTimestamp.h  edgeHierarchyReader.h  edgeHierarchyWriter.h  edgeIdCreator.h  graph.h  shortcutHelper.h
lib/edgeRanking/: levelShortcutsHopsEdgeRanker.h  shortcutCountingRoundsEdgeRanker.h  shortcutCountingSortingRoundsEdgeRanker.h  shortcutsHopsRoundsEdgeRanker.h
scripts/: dijkstraRankPlot.py  run.py
tests/: CMakeLists.txt  arraySetTests.cpp  bipartiteMinimumVertexCoverTests.cpp  dimacsGraphReaderTests.cpp  edgeHierarchyConstructionTests.cpp  edgeHierarchyGraphTests.cpp  edgeHierarchyQueryTests.cpp  edgeIdCreatorTests.cpp  exampleGraph.dimacs  graphTests.cpp  shortcutCountingRoundsEdgeRankerTests.cpp  shortcutHelperTests.cpp  tests.cpp
